[package]
name = "facet-urlencoded"
version = "0.28.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-urlencoded"
description = "URL encoded form serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
facet-core = { version = "0.30" }
facet-reflect = { version = "0.30" }
form_urlencoded = "1.2.1"
log = "0.4.27"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
eyre = "0.6.12"
facet = { version = "0.30" }
facet-testhelpers = { version = "0.30" }
